# alapi-fastapi-template

./: .env.example  .gitignore  alapi_client.py  main.py  pyproject.toml  readme.md  test.py
static/: index.html
